spill over corrected on accordion-main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ footer i:hover {
 
 .accordion-main h2 {
     font-family: "Comfortaa", sans-serif;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 700;
     text-align: center;
     display: inline;
